--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ritimoTask
+spring.application.name=ritmoTask
 # Configuração da conexão com o banco MySQL
 spring.datasource.url=${MYSQLURL}
 spring.datasource.username=${MYSQLUSER}
