verificação de email adicionada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+# Configurações para geração de tokens e autenticação
 token.secret.key=${SECRET_KEY}
+
+# Configurações para envio de emails
+spring.mail.host=${MAILHOST:smtp.gmail.com}
+spring.mail.port=${MAILPORT:587}
+spring.mail.username=${MAILUSERNAME}
+spring.mail.password=${MAILPASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true 
