Salvando usuário no banco de dados com o Oauth2 do google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,10 @@ spring.mail.username=${MAILUSERNAME}
 spring.mail.password=${MAILPASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true 
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Configurações para login com google
+spring.security.oauth2.client.registration.google.client-id=${GOOGLECLIENTID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLECLIENTSECRET}
+
+
